--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -18,6 +18,11 @@
                 android:id="@+id/nav_manage"
                 android:icon="@drawable/ic_menu_manage"
                 android:title="Tools"/>
+
+        <item
+            android:id="@+id/nav_sync"
+            android:icon="@drawable/ic_autorenew_black_24dp"
+            android:title="@string/textSync" />
     </group>
 
     <item android:title="Communicate">
